# NagoyaAPI

./: .env  .gitignore  Cargo.lock.license  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
assets/: nagoya_countries.json
src/: api.rs  external_data.rs  handlers.rs  helpers.rs  main.rs  models.rs  nagoya_check.rs
