[package]
name = "NagoyaAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
utoipa = "5.4.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }