# SPDX-FileCopyrightText: 2025 Constantin Breß <constantin.bress@partner.kit.edu>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "NagoyaAPI"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
utoipa = "5.4.0"
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.8", features = ["trace"] }
rust_iso3166 = "0.1.14"